--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </div>
-    <script src="./Assets/script.js">
+    <script src="./Assets/smodule3-script.js">
 
 
 
